--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        </ul>
   </li>
   <ol>
-     <li></li>
+     <li>Spread butter on bread and frying pan</li>
       <li></li>
        <li></li>
         <li></li>
